--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Parallax Scrolling Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,12 +22,9 @@
         <section class="panel orange">TWO</section>
         <section class="panel purple">THREE</section>
     </main>
-    
-    <!-- GSAP and ScrollTrigger Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollToPlugin.min.js"></script>
     <script src="app.js"></script>
-        
 </body>
 </html>
